--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="contenedor-videos fadeInUp">
 
-        <video class="video-hb" controls src="video/Ann.mp4"></video>
+        <video poster="images/hace.png" class="video-hb" controls src="video/Ann.mp4"></video>
        
    
   
